<resources>
    <string name="app_name">kill_joni JONI AST</string>
    <string name="button1Text" translatable="false">All Words</string>
    <string name="button2Text" translatable="false">Server Words</string>
    <string name="button3Text" translatable="false">Vip Words</string>
    <string name="website">http://killjoniast.myarena.ru/android/</string>
    <string name="website2">https://www.myarena.ru/</string>
    <string name="IpAddress">Server IP Address: 46.174.48.29:27202</string>
    <string name="button4Text">Admin Connect</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="tab_text_1">All words</string>
    <string name="tab_text_2">Server</string>
    <string name="tab_text_3">VIP</string>
    <string name="tab_text_4">Admins</string>
    <string name="tab_text_5">Status</string>
    <string name="tab_text_6">Players</string>
    <string name="tab_text_7">Message</string>


    <string name="gag">gag</string>
    <string name="ban">amx_ban 10</string>
    <string name="slay">amx_slay</string>
    <string name="slap">amx_slap</string>
    <string name="kick">amx_kick</string>
    <string name="token">2e5dcefb0c72d69ead8c2c1d0a2ba358</string>
</resources>
